# tradestation-python

./: .gitignore  .requirement  README.md  generate_pydantic_models.py  openapi.json  pyproject.toml  setup.py
docs/: index.md  usage.md
examples/: accounts_details.py  basic_usage.py  place_order.py  place_order_advanced.py  stream_market_data.py
src/tradestation/: __init__.py  auth.py  auth_success.html  client.py  exceptions.py  models.py
tests/: test_tradestation.py
tradestation/: models.py  tradestation.py  types.py
